--- a/bot/.env.example
+++ b/bot/.env.example
@@ -1,3 +1,7 @@
+# ============================================================
+# VALUETRADEGAME - Environment Configuration v0.2
+# ============================================================
+
 # Telegram
 BOT_TOKEN=your_bot_token_here
 ADMIN_ID=your_telegram_user_id
@@ -7,8 +11,21 @@ SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_KEY=your_anon_key_here
 SUPABASE_SERVICE_KEY=your_service_role_key_here
 
-# Web App URL (deine gehostete React App)
+# Web App & Integration
+# Deine gehostete React App URL
 WEBAPP_URL=https://your-webapp.vercel.app
+# Direktlink zum Bonus-Claim (startapp Parameter)
+BONUS_CLAIM_URL=https://t.me/your_bot_name/app?startapp=claim_bonus
+
+# Game Settings (v0.2 Leverage & Events)
+LEVERAGE_FEE=0.005
+MONDAY_MAX_LEVERAGE=10
+DEFAULT_MAX_LEVERAGE=5
+
+# Storage Configuration
+# Buckets müssen in Supabase erstellt und auf 'Public' gesetzt sein
+STORAGE_BUCKET_AVATARS=avatars
+STORAGE_BUCKET_BACKGROUNDS=backgrounds
 
 # Server
 PORT=3000
